<resources>
    <string name="app_name">WaveSound</string>
    <string name="all_song_btn">All Song</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">PlayList</string>
    <string name="all_songs">All Songs</string>
    <string name="playlists">PlayLists</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="min_90">90 Minutes</string>
    <string name="min_120">120 Minutes</string>

    <string name="menu_local">Local</string>
    <string name="menu_online">Online</string>
    <string name="menu_user">User</string>
    <string name="title_activity_music_player">Leanback MusicPlayerActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="add_song">Add Song</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="playlist_info">playlist_info</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="duration">Duration</string>
    <string name="previus_song">Previus Song</string>
    <string name="play_song">Play Song</string>
    <string name="next_song">Next Song</string>
    <string name="timer">Timer</string>
    <string name="random">Random</string>
    <string name="repeat">Repeat</string>
    <string name="favorite">Favorite</string>
    <string name="user_name">User Name</string>
    <string name="song_url">Song URL</string>
    <string name="song_name">Song Name</string>
    <string name="music_will_stop_in">Music will stop in...</string>
    <string name="total_songs">Total Songs:</string>
    <string name="album_name">Album Name</string>
    <string name="default_timer">00:00</string>
    <string name="playlist_image">Playlist Image</string>
    <string name="playlist_delete">playlist_delete</string>

</resources>