<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_local"
    >

    <fragment
        android:id="@+id/nav_local"
        android:name="com.example.wavesound.ui.local.LocalFragment"
        android:label="@string/menu_local"
        tools:layout="@layout/fragment_local" />

    <fragment
        android:id="@+id/nav_online"
        android:name="com.example.wavesound.ui.online.OnlineFragment"
        android:label="@string/menu_online"
        tools:layout="@layout/fragment_online" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.wavesound.ui.user.UserProfile"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_usuario" />
</navigation>