<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/button"
    android:backgroundTint="@color/navbar"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="115dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corner_background"
        android:contentDescription="@string/playlist_image"
        android:paddingTop="15dp"
        android:src="@drawable/logob"
        app:shapeAppearanceOverlay="@style/curved" />

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/playlistName"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/playlist_name"
            android:gravity="center"
            android:textSize="19sp"
            android:ellipsize="marquee"
            android:paddingStart="25dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            style="@style/Text"/>

        <ImageButton
            android:id="@+id/playlistDeleteBtn"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/playlist_delete"
            android:src="@drawable/baseline_delete_24"
            android:paddingEnd="10dp"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>