<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.local.PlayListDetails">

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:src="@drawable/logob" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlistNamePD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button"
                android:gravity="center|start"
                android:padding="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/playlist_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/moreInfoPD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button"
                android:gravity="center|start"
                android:paddingHorizontal="10dp"
                android:text="@string/playlist_info"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:scrollbars="vertical"
        android:paddingBottom="270dp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addBtnPD"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_song"
            android:drawableLeft="@drawable/baseline_add_24"
            android:text="@string/add_song"
            android:textColor="@color/white"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded"
            android:background="@color/button"/>

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/navbar"
            android:contentDescription="@string/back"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            />

        <Button
            android:id="@+id/removeAllPD"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove"
            android:drawableLeft="@drawable/baseline_remove_24"
            android:text="@string/remove"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/button"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>