<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Music will stop in..."
        android:textSize="24sp"
        style="@style/Text"
        android:padding="10dp"
        android:background="@color/navbar"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/min_15"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_av_timer_24"
            android:background="?attr/selectableItemBackground"
            android:padding="1dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_15"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            style="@style/Text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_30"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_av_timer_24"
            android:background="?attr/selectableItemBackground"
            android:padding="1dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_30"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            style="@style/Text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_60"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_av_timer_24"
            android:background="?attr/selectableItemBackground"
            android:padding="1dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_60"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            style="@style/Text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_90"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_av_timer_24"
            android:background="?attr/selectableItemBackground"
            android:padding="1dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_90"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            style="@style/Text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_120"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_av_timer_24"
            android:background="?attr/selectableItemBackground"
            android:padding="1dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_120"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            style="@style/Text"/>
    </LinearLayout>

</LinearLayout>